# flask_api

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  run.py
.github/workflows/: hello.yml
api/: __init__.py  calculation.py  preparation.py
api/config/: __init__.py  base.py  local.py
tests/: conftest.py  test_calculation.py  test_preparation.py  test_preprocess.py
